<resources>
    <string name="app_name">Weighted Average Calculator</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="start">Start</string>
    <string name="calculate">Calculate</string>
    <string name="history">History</string>

    <string name="choose_note">Choose\nNote</string>
    <string name="choose_weight">Choose\nWeight</string>
    <string name="note_nr">Note nr %d</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="last_averages">Last Averages</string>
    <string name="list_of_averages">List of Averages</string>

    <string name="weighted_average_name_and_value">Weighted average: %.2f</string>
    <string name="weighted_average">Weighted average: </string>
    <string name="results">Results</string>
    <string name="notes">Notes</string>
    <string name="weights">Weights</string>
    <string name="name_result">Name result:</string>
    <string name="calculate_once_again">Calculate next</string>
    <string name="back">Back</string>
    <string name="change_notes">Change Notes</string>
    <string name="weighted_average_name">Name: </string>
    <string name="no_name">unnamed</string>
    <string name="weighted_average_value">%.2f</string>
    <string name="date">Date:</string>

    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="dialog_delete_question">Are you sure you want to delete?</string>

    <string name="rate_app">Rate this up</string>
    <string name="rate_app_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="sure">Sure!</string>
    <string name="later">Later</string>
    <string name="no_thanks">Not now</string>
    <string name="save">Save</string>
    <string name="not_save">Not save</string>
    <string name="tags">Tags:</string>
    <string name="change">Change</string>
    <string name="change_tags">Change Tags</string>
    <string name="name">Name:</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="apply">Apply</string>
    <string name="delete_avg">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="no_results">You don\'t have any averages</string>

</resources>
