<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="calculatorViewModel"
            type="com.szymonstasik.kalkulatorsredniejwazonej.calculator.CalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/bg_start"
        android:layout_height="match_parent"
        tools:context=".calculator.CalculatorFragment">

        <RelativeLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/green_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ripple"
                android:onClick="@{() -> calculatorViewModel.onBackPressed()}"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/calculate"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/chooseNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:text="@string/choose_note"
            android:textColor="@color/color_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintBottom_toTopOf="@+id/calculateButton"
            app:layout_constraintTop_toBottomOf="@+id/chooseNote">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/notesAndWeightesRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/deleteNote"
                        style="@style/RoundedLightYellowButton"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/rounded_rec_automn"
                        android:elevation="20dp"
                        android:textColor="@color/white"
                        android:text="@string/delete_note"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/addNewNote"
                        style="@style/RoundedLightYellowButton"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/rounded_rec_green"
                        android:elevation="20dp"
                        android:text="@string/add_note"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> calculatorViewModel.onCalculateClick()}"
            android:text="@string/calculate"
            android:textSize="24sp"
            android:fontFamily="@font/ubuntu_bold"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:background="@drawable/rounded_rec_green"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/chooseWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center"
            android:text="@string/choose_weight"
            android:textColor="@color/color_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>